distortion in container style since container class is available in tailwind, conflict fixed

--- a/src/projects/06-password-generator/styles.css
+++ b/src/projects/06-password-generator/styles.css
@@ -1,7 +1,7 @@
 .pwd-app-title {
   margin-bottom: 3rem;
 }
-.container {
+.pwd-app .container {
   max-width: 35rem;
   margin: 0 auto;
   background: #000014;
